Update to Next.js 16.0.10 and fix compatibility issues

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,8 @@ temp/
 .firebase/
 firebase-debug.log
 firestore-debug.log
+functions/lib/
+functions/node_modules/
 
 # Local Netlify folder
 .netlify
