--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "firebase:build": "npm run build && cd functions && npm install && npm run build",
+    "firebase:deploy": "npm run firebase:build && firebase deploy",
+    "firebase:deploy:hosting": "npm run firebase:build && firebase deploy --only hosting",
+    "firebase:deploy:functions": "npm run firebase:build && firebase deploy --only functions",
+    "vercel:deploy": "vercel --prod",
+    "vercel:deploy:preview": "vercel"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -42,7 +48,7 @@
     "firebase-admin": "^12.1.1",
     "geist": "^1.5.1",
     "lucide-react": "^0.400.0",
-    "next": "^15.5.3",
+    "next": "^16.0.10",
     "next-auth": "^4.24.7",
     "postgres": "^3.4.7",
     "protobufjs": "^7.5.4",
@@ -73,9 +79,9 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.0.0",
+    "globals": "^16.4.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "globals": "^16.4.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "typescript": "^5",
@@ -86,7 +92,7 @@
       "prettier --write"
     ],
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
+      "eslint --fix --max-warnings=0 --no-warn-ignored"
     ]
   },
   "overrides": {
