Guard Husky prepare script for CI

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:strict": "eslint . --max-warnings=0",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky install",
+    "prepare": "husky install || echo husky not installed, skipping",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
